<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".presentation.ChooseLevelFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/choose_level"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/choose_level_title"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/easy_level_button"
            style="@style/LevelButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/easy_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/normal_level_button"
            style="@style/LevelButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/normal_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hard_level_button"
            style="@style/LevelButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/hard_label" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mini_rules"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>