<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="result"
            type="com.emdasoft.mygamenumbers.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.ResultFragment">

        <ImageView
            android:id="@+id/image_smile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:image_smile="@{result.winner}"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/fun_smile" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toTopOf="@id/retry_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_required_answer"
                    style="@style/ResultTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_light"
                    android:textSize="14sp"
                    app:requiredAnswer="@{result.gameSettings.minCountOfRightAnswers}"
                    tools:text="@string/tv_required_answer"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_score_answer"
                    style="@style/ResultTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:scoreAnswer="@{result.countOfRightAnswers}"
                    tools:text="@string/tv_score_answer"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_required_percent"
                    style="@style/ResultTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_light"
                    android:textSize="14sp"
                    app:requiredPercent="@{result.gameSettings.minPercentOfRightAnswers}"
                    tools:text="@string/tv_required_percent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_score_percent"
                    style="@style/ResultTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold"
                    app:scorePercent="@{result}"
                    tools:text="@string/tv_score_percent"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/retry_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>